# alagitpull

./: .gitignore  .tmuxp.yaml  CHANGES  LICENSE  MANIFEST.in  Pipfile  README.rst  pyproject.toml  setup.py
alagitpull/: __init__.py  _version.py  more.html  theme.conf
alagitpull/static/: alagitpull.css_t
alagitpull/writers/: external.py
requirements/: base.txt
